# ros_qtc_plugin

./: .buildinfo  .gitignore  .gitmodules  CMakeLists.txt  CODEOWNERS  README.md  format_source_files.sh  genindex.html  index.html  ros_qtc_plugin.pri  ros_qtc_plugins.pri  ros_qtc_plugins.pro  search.html  searchindex.js  setup-dev.sh  setup-usr.sh  setup.py  setup.sh  versions.yaml
.doctrees/: environment.pickle  index.doctree
.doctrees/_source/: Debugging-Catkin-Workspace.doctree  FAQ.doctree  How-to-Install-Users.doctree  Import-ROS-Workspace.doctree  (+3 more)
4.3/: genindex.html  index.html  search.html  searchindex.js
4.4/: genindex.html  index.html  objects.inv  search.html  searchindex.js
4.5/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
_source/: Debugging-Catkin-Workspace.html  FAQ.html  How-to-Install-Users.html  Import-ROS-Workspace.html  Improve-ROS-Qt-Creator-Plugin-Developers-ONLY.html  Setup-Qt-Creator-for-ROS.html  Where-to-find-Qt-Creator-Plug-in-Support.html
_sources/: index.rst.txt
cmake/: FindYamlCpp.cmake
debian/: changelog  control  copyright  gbp.conf  qt57creator-plugin-ros-dev.install  qt57creator-plugin-ros.install  rules  shlibs.local
gh_pages/: conf.py  index.rst
installer/: LICENSE.APACHE  create_431_installer.sh  create_441_installer.sh  create_451_installer.sh  create_482_installer.sh  create_latest_installer.sh  installer_functions.sh  readme.md
project_manager/: ROSProjectManager.mimetypes.xml  ROSProjectManager.mimetypes.xml~  ros_build_configuration.cpp  ros_build_configuration.h  ros_build_configuration.ui  ros_generic_configuration.ui  ros_launch_configuration.ui  ros_make_step.cpp  ros_make_step.h  ros_output_pane.cpp  ros_output_pane.h  ros_output_window.cpp  ros_output_window.h  ros_project.cpp  ros_project.h  ros_project.qrc  ros_project_constants.h  ros_project_files_editor.cpp  ros_project_files_editor.h  ros_project_manager.cpp  ros_project_manager.h  ros_project_manager.pro  ros_project_manager_dependencies.pri  ros_project_nodes.cpp  ros_project_nodes.h  ros_project_plugin.cpp  ros_project_plugin.h  ros_project_wizard.cpp  ros_project_wizard.h  ros_run_configuration.cpp  ros_run_configuration.h  ros_run_configuration.ui  ros_run_configuration_factory.h  ros_run_step.cpp  ros_run_step.h  ros_run_steps.cpp  ros_run_steps.h  ros_run_steps_page.cpp  ros_run_steps_page.h  ros_terminal_pane.cpp  (+3 more)
share/: share.pro
share/templates/wizards/files/ros_industrial_robot/: CMakeLists.txt  file.xacro  file_macro.xacro  load.launch  package.xml  robot_interface_download.launch  robot_state_visualize.launch  roslaunch_test.xml  test.launch  wizard.json
src/: src.pro
src/project_manager/: CMakeLists.txt  ROSProjectManager.json.in  ROSProjectManager.mimetypes.xml  config.yaml  project_manager.pro  project_manager_dependencies.pri  remove_directory_dialog.cpp  remove_directory_dialog.h  remove_directory_dialog.ui  ros_build_configuration.cpp  ros_build_configuration.h  ros_build_configuration.ui  ros_build_system.cpp  ros_build_system.h  ros_catkin_make_step.cpp  ros_catkin_make_step.h  ros_catkin_make_step.ui  ros_catkin_test_results_step.cpp  ros_catkin_test_results_step.h  ros_catkin_tools_config_editor.ui  ros_catkin_tools_list_editor.ui  ros_catkin_tools_step.cpp  ros_catkin_tools_step.h  ros_catkin_tools_step.ui  ros_colcon_step.cpp  ros_colcon_step.h  ros_colcon_step.ui  ros_generic_configuration.ui  ros_generic_run_step.cpp  ros_generic_run_step.h  ros_import_wizard_page.ui  ros_make_step.cpp  ros_make_step.h  ros_make_step.ui  ros_package_wizard.cpp  ros_package_wizard.h  ros_package_wizard_details_page.ui  ros_packagexml_parser.cpp  ros_packagexml_parser.h  ros_project.cpp  (+38 more)
(+97 files in other folders)
