<package>
  <name>%{PackageName}</name>
  <version>TODO</version>
  <description>
    <p>
      ROS-Industrial support for the %{JS: '%{Manufacturer}'.toUpperCase()} %{JS: '%{Model}'.toUpperCase()} (and variants).
    </p>
    <p>
      This package contains configuration data, 3D models and launch files
      for %{JS: '%{Manufacturer}'.toUpperCase()} %{JS: '%{Model}'.toUpperCase()} manipulators. This currently includes the base model.
    </p>
    <p>
      Joint limits and max joint velocities are based on the information in
      the %{JS: '%{Manufacturer}'.toUpperCase()} data sheets.  All URDFs / XACROs are based on the
      default motion and joint velocity limits, unless noted otherwise (ie:
      no support for high speed joints, extended / limited motion ranges or
      other options).
    </p>
    <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use them with.
    </p>
  </description>
  <author email="TODO">TODO</author>
  <maintainer email="TODO">TODO</maintainer>
  <license>TODO</license>

  <url type="website">http://ros.org/wiki/%{PackageName}</url>
  <url type="bugtracker">https://github.com/ros-industrial/%{Manufacturer}/issues</url>
  <url type="repository">https://github.com/ros-industrial/%{Manufacturer}</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>

  <run_depend>%{Manufacturer}_driver</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
</package>
